--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/renangueiros/sextou-node/issues"
   },
-  "homepage": "https://github.com/renangueiros/sextou-node#readme"
+  "homepage": "https://github.com/renangueiros/sextou-node#readme",
+  "devDependencies": {
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
